# NotionPomodoroTracker

./: ARCHITECTURE.md  Cargo.toml  DATABASE_SCHEMA.md  DESIGN.md  DEVELOPMENT_PLAN.md  NOTION_SETUP.md  PRODUCT.md  README.md  justfile
.impeccable/critique/: 2026-07-08T17-55-28Z__src-ui-windows-main-window-rs.md
data/: com.frjr17.NotionPomodoroTracker.desktop
src/: main.rs
src/application/: mod.rs  settings_service.rs  sync_service.rs  task_service.rs  timer_service.rs
src/domain/: mod.rs  pomodoro.rs  sync_state.rs  task.rs  time_session.rs
src/infrastructure/: mod.rs
src/infrastructure/notifications/: mod.rs
src/infrastructure/notion/: client.rs  mapping.rs  markdown.rs  mod.rs
src/infrastructure/secret_store/: mod.rs
src/infrastructure/sqlite/: mod.rs  session_repo.rs  settings_repo.rs  sync_log_repo.rs  task_repo.rs
src/ui/: app.rs  format.rs  mod.rs
src/ui/components/: conflict_dialog.rs  mod.rs  sync_controller.rs  task_detail.rs  task_list.rs  timer_view.rs
src/ui/windows/: main_window.rs  mod.rs  settings_window.rs
