[package]
name = "notion-pomodoro-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
adw = { version = "0.9.2", package = "libadwaita", features = ["v1_5"] }
async-channel = "2.5.0"
chrono = { version = "0.4.45", features = ["serde"] }
gtk = { version = "0.11.4", package = "gtk4", features = ["v4_10", "v4_12"] }
keyring = "4.1.4"
pulldown-cmark = { version = "0.13.0", default-features = false }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
ureq = { version = "3.3.0", features = ["json"] }
uuid = { version = "1.23.4", features = ["v4"] }
